# PHIL-4176

./: .gitignore  README.md  staticwebapp.config.json
.github/workflows/: azure-static-web-apps-thankful-rock-01bf1f10f.yml  main_phil-4176.yml
api/: app.py  function_app.py  host.json  pyproject.toml  requirements.txt
app/: package-lock.json  package.json  webpack.config.js
app/src/: index.css  index.html  index.js
docs/: bibliography.bib  bibliography.bst  paper.run.xml  paper.sty  paper.tex
