[project]
name = "my_project"
version = "0.1.0"
description = "A Python project using Azure Functions and Google GenAI"
authors = [
    { name = "Amulya Jain", email = "amuly.jain@gmail.com" }
]
dependencies = [
    "azure-functions",
    "google-genai"
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
